# juzfs

./: .gitignore  Cargo.toml  README.md
src/: chunkserver.rs  client.rs  lib.rs  main.rs  master.rs  namespace.rs  oplog.rs  protocol.rs  shadow.rs
src/messages/: chunkserver_chunkserver.rs  chunkserver_master.rs  client_chunkserver.rs  client_master.rs  mod.rs  shadow.rs
tests/: chunkserver_test.rs  master_test.rs  protocol_test.rs
