[package]
name = "juzfs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "master-server"
path = "src/bin/master_server.rs"

[[bin]]
name = "chunkserver-node"
path = "src/bin/chunkserver_node.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
lru = "0.16"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
